<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg2" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="461dp"
    android:animateLayoutChanges="false"
    android:background="@string/questionnaire_heading"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/patientDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/surname"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/age"
        android:layout_below="@+id/age"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gender" />

    <EditText
        android:id="@+id/age"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/surname"
        android:layout_below="@+id/surname"
        android:layout_marginTop="23dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/age"
        android:inputType="number" />

    <TextView
        android:id="@+id/patientDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/patientDetails"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/questionnaires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gender"
        android:layout_marginTop="20dp"
        android:entries="@string/Questionnaires_list"
        android:text="@string/questionnaire_heading"
         android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/patientsEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gender"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="showWelcome"
        android:paddingBottom="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="15dp"
        android:text="@string/patientsEnter"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/spinner_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionnaires"
        android:layout_marginTop="22dp"
        />
    
</RelativeLayout>
</ScrollView>