<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tutorialp2_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical|center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/tutorial_p2_1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/button"
        android:textStyle="bold" />
    
    

    <Button
        android:id="@+id/next_btn_tuto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/next_btn_tuto"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="showTutorial3" />

    <Button
        android:id="@+id/prev_btn_tuto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_btn_tuto2"
        android:layout_alignBottom="@+id/next_btn_tuto2"
        android:layout_alignParentLeft="true"
        android:text="@string/prev_btn_tuto"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="showTutorial1" />

    <Button
        android:id="@+id/skip_tutorial_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_btn_tuto2"
        android:layout_alignBottom="@+id/next_btn_tuto2"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/next_btn_tuto2"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/skip_tutorial_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="showQuestionnaire" />

    <ImageView
        android:id="@+id/tutorial_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/textbox_keyboard_t2" />

    <TextView
        android:id="@+id/tutorialp2_text_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutorial_keyboard"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tutorial_p2"
        android:textColor="#ffffff"
        android:textSize="15sp" />
    
</RelativeLayout>
