<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

        <Button
        android:id="@+id/next_btn_tuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tutorial_text_1"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/next_btn_tuto"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="showTutorial2" />
        
        <Button
        android:id="@+id/skip_tutorial_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_btn_tuto"
        android:layout_alignBottom="@+id/next_btn_tuto"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/next_btn_tuto"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/skip_tutorial_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:onClick="showQuestionnaire" />

    <TextView
        android:id="@+id/tutorial_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical|center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/tutorial_p1_1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" 
        android:background="@drawable/button" />

    <ImageView
        android:id="@+id/tutorial_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/screen_1fingertouch" />

    <TextView
        android:id="@+id/tutorial_text_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutorial_touch"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tutorial_p1_2"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>
