<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splash_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_title"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/splash3" />

    <TextView
        android:id="@+id/teamj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_image"
        android:layout_centerHorizontal="true"
        android:text="@string/teamj"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>